[package]
name = "director"
version = "0.4.0"
edition = "2021"
categories = [ "development-tools", "algorithms", "rust-patterns", "game-development", "no-std"]
keywords = [ "director", "engine", "versatile", "game", "state-machine", "no-std" ]
description = "Director is a simple, versatile, ergonomic state machine in Rust-lang."
homepage = "https://github.com/just-do-halee/director"
repository = "https://github.com/just-do-halee/director"
license = "MIT OR Apache-2.0"
readme = "README.md"

exclude = [
    "RELEASE.md",
    "release.toml",
    ".gitignore",
    ".github/",
    "crates/"
]

[workspace]
members = [
    "crates/*",
]

[[example]]
name = "basic"
path = "examples/basic/basic.rs"

[dependencies]
director_core = { version = "0.5", path = "crates/director_core" }