[package]
name = "director_core"
version = "0.3.0"
edition = "2021"
categories = [ "development-tools", "algorithms", "rust-patterns", "game-development", "no-std"]
keywords = [ "director", "engine", "versatile", "game", "state-machine" ]
description = "Director is a simple, versatile, ergonomic state machine in Rust-lang."
homepage = "https://github.com/just-do-halee/director"
repository = "https://github.com/just-do-halee/director"
license = "MIT OR Apache-2.0"

[dependencies]
paste = { version = "1" }
director_macros = { version = "0.3", path = "../director_macros" }