[package]
name = "director_macros"
version = "0.3.0"
edition = "2021"
categories = [ "development-tools", "algorithms", "rust-patterns", "game-development", "no-std"]
keywords = [ "director", "engine", "versatile", "game", "state-machine" ]
description = "Director is a simple, versatile, ergonomic state machine in Rust-lang."
homepage = "https://github.com/just-do-halee/director"
repository = "https://github.com/just-do-halee/director"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }